# hygge

./: .gitignore  .pre-commit-config.yaml  .yamllint  ARCHITECTURE_DECISIONS.md  ASSUMPTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FLOW_CLEANUP_PROPOSAL.md  HYGGE_DONE.md  HYGGE_PROGRESS.md  ISSUE_STATUS.md  LICENSE  NEXT_CONVERSATION_PROMPT.md  NEXT_STEPS.md  PROGRESS_REVIEW.md  PR_SUMMARY.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  VERSIONING.md  WORKSPACE_EXTRACTION_CHECKLIST.md  branch_diff.txt  branch_summary.txt  pyproject.toml  pytest.ini  requirements.txt
.cursor/commands/: fix.md  hygge-review.md  pr-summary.md  publish.md  release.md  review.md  run-tests.md  technical-review.md  test.md
.github/: README.md
.github/workflows/: protect-main.yml  status-checks.yml  stress-tests.yml  tdd-validation.yml
.issues/: NEXTUP.md  ROADMAP.md  TECHNICAL_REVIEW_PYTHONIC_RAILS.md  __TECHNICAL_REVIEW_SUMMARY.md  adapter-system-design.md  adbc-connectors.md  adls-configure-for-run-duplicate.md  file-format-abstraction-and-local-home-store.md  flowfactory-documentation.md  friendly-error-messages.md  google-drive-integration.md  hygge-feels-hyggesque.md  mssql-python-migration.md  mssql-stress-testing.md  openmirroring-finish-fallback-cleanup.md  openmirroring-refactor.md  schema-manifest-improvements.md  semaphore-release-during-full-drop-wait.md  sqlite-store-tests.md  staged-writer-abstraction.md  store-interface-standardization.md  store-type-hints.md  table-stakes-capabilities.md  test-coverage-improvements.md  watermark-filter-fallback.md  welcome-data-from-everywhere.md
.llm/: README.md  ci_cd_tdd_strategy.md  config_architecture_design.md  context.md  development.md  el_framework_recommendation.md  error_handling_improvement.md  flow_simplification_recommendation.md  journal_design.md  mssql_store_performance.md  no_terminal.md  personal_tool_assessment.md  prompt.md  python_philosophy.md  rails101.md  rails_philosophy.md  sql_homes_connection_pooling.md  sql_implementation_summary.md  test_prompt.md  testing_strategy.md
.progress/: HYGGE_DONE.md  HYGGE_PROGRESS.md  NARRATIVE_PROGRESS_SUMMARY.md  PR_REVIEW.md  PR_SUMMARY.md
examples/: README.md  coordinator_example.py  entity_pattern_example.py  large_volume_mssql_test.py  parquet_example.py  parquet_flow.py  parquet_to_mssql_example.py
issues/: TECHNICAL_REVIEW_SUMMARY.md  cli-simplification.md  coordinator-refactoring.md  entity-configuration-lifecycle.md  error-handling-standardization.md  flow-creation-extraction.md  flow-entity-separation.md  manual-flow-execution.md  manual-flow-log.txt  mirror-journal-batching.md  polisher-transform.md  store-config-entity-inference.md  store-interface-standardization.md  test-coverage-improvements.md  watermark-tracker-extraction.md
samples/: README.md  advanced_home_store.yaml  entity_pattern.yaml  minimal_flow.yaml  mssql_auto_create_simple.yaml  mssql_custom_query.yaml  mssql_entity_pattern.yaml  mssql_to_parquet.yaml  multiple_flows.yaml  parquet_to_mssql_test.yaml  simple_parquet_flow.yaml
samples/p2mssql_multi_file_example/: README.md  generate_data.py  hygge.yml
src/hygge/: __init__.py  __main__.py  cli.py
src/hygge/core/: flow.py  (+10 more)
tests/: README.md  conftest.py
tests/error_scenarios/: test_configuration_errors.py
tests/integration/: test_adls_store.py  test_config_integration.py  test_coordinator_integration.py  test_coordinator_yaml_integration.py  test_entity_pattern.py  test_incremental_mssql_to_parquet.py  test_mssql_large_volume.py  test_mssql_to_parquet_read.py  test_parquet_home_flow_integration.py  test_parquet_to_mssql_roundtrip.py  test_parquet_to_mssql_write.py  (+3 more)
(+121 files in other folders)
