[project]
name = "hygge"
version = "0.2.0"
description = "Modern data movement framework"
authors = [
    {name = "Nick Teff", email = "nick@pineydata.com"},
]
dependencies = [
    "polars>=1.21.0",
    "pyarrow>=18.0.0",  # Columnar backend for Polars
    "pydantic>=2.6.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "colorama>=0.4.6",
    "click>=8.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
mssql = [
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.1.0",
]
azure = [
    "azure-identity>=1.19.0",
    "azure-storage-file-datalake>=12.18.0",
    "azure-core>=1.32.0",
]
# All optional runtime dependencies (mssql + azure)
all = [
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.1.0",
    "azure-identity>=1.19.0",
    "azure-storage-file-datalake>=12.18.0",
    "azure-core>=1.32.0",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.2.1",
    "pre-commit>=4.0.0",
]

[project.scripts]
hygge = "hygge.cli:hygge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Same as Black.
line-length = 88

# Assume Python 3.11
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes by default
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["hygge"]
